--- a/web 1/index.html
+++ b/web 1/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Задание 1</title>
@@ -38,10 +39,10 @@
             <a href="about/about.html">Относительная на страницу в каталоге about</a>
         </li>
         <li>
-            <a href="../index">Для 11 пункта</a>
+            <a href="../index"> Относительная ссылка на страницу в каталоге уровнем выше текущего</a>
         </li>
         <li>
-            <a href="../../index">Для 12 пункта</a>
+            <a href="../../index"> Относительная ссылка на страницу в каталоге двумя уровнями выше текущего</a>
         </li>
         <li>
             Не знаете где учиться на проффесию программиста, попробуйте пройти курсы от <a href="#">Блаблаболов</a> без смс и регистраций
@@ -133,4 +134,5 @@
     </label>
     <input type="submit" value="Сохранить">
 </body>
+
 </html>
