--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <br>
     <br>
     <strong>Любимый язык программирования :</strong>
-    <select name="field">
+    <select name="field" multiple="multiple">
         <option value="one">Pascal</option>
         <option value="one">C</option>
         <option value="one">C++</option>
