--- a/about/about.html
+++ b/about/about.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><a href="..\index.html">Return</a></h1>
+    <h1><a href="..\index.html">Вернуться</a></h1>
+    <br>
+    <h3><a href="..\index.html">ссылка на страницу в каталоге уровнем выше текущего</a></h3>
 </body>
 </html>
