--- a/about/under_about/under.html
+++ b/about/under_about/under.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><a href="..\..\index.html">Return</a></h1>
+    <h1><a href="..\..\index.html">Ссылка на 2 каталога выше</a></h1>
 </body>
 </html>
