--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="https://Kubsu.ru">https cсылка на Кубгу</a>
         </li>
         <li>
-            <a href="#"><img src="img.png" width="300" alt="Цветок"></a>
+            <a href="https://www.kubsu.ru/"><img src="img.png" width="300" alt="Цветок"></a>
         </li>
         <li>
             <a href="out/outindex.html">Cокращенная ссылка на внутреннюю страницу</a>
@@ -61,8 +61,8 @@
         </li>
     </ul>
     <map name="square">
-        <area shape="rect" coords="203,41,346,183" href="#" alt="">
-        <area shape="circle" coords="100,107,73" href="#" alt="">
+        <area shape="rect" coords="203,41,346,183" href="https://www.kubsu.ru/" alt="">
+        <area shape="circle" coords="100,107,73" href="https://moodle.kubsu.ru/course/" alt="">
     </map>
     <ul>
 
