--- a/index.html
+++ b/index.html
@@ -1,140 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Задание 1</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleSCSS.css">
+    <script src="skript.js" defer></script>
+    <title>Skrol</title>
 </head>
-
 <body>
-    <ul>
-        <li>
-            <a href="http://Kubsu.ru/">Ссылка на Кубгу</a>
-        </li>
-        <li>
-            <a href="https://Kubsu.ru">https cсылка на Кубгу</a>
-        </li>
-        <li>
-            <a href="#"><img src="img.png" width="300" alt="Цветок"></a>
-        </li>
-        <li>
-            <a href="out/outindex.html">Cокращенная ссылка на внутреннюю страницу</a>
-        </li>
-        <li>
-            <a href="index.html">Cокращенная ссылка на главную страницу</a>
-        </li>
-        <li>
-            <a href="#button">Ссылка на фрагмент текущей страницы</a>
-        </li>
-        <li>
-            <a href="http://Kubsu.ru?kurs=1&fuk=010302&form=plat">Cсылка с тремя параметрами в URL;</a>
-        </li>
-        <li>
-            <a href="https://hackertyper.com/?id=123">Cсылка с параметром id в URL</a>
-        </li>
-        <li>
-            <a href="index_2.html">Относительная на страницу в текущем каталоге</a>
-        </li>
-        <li>
-            <a href="about/about.html">Относительная на страницу в каталоге about</a>
-        </li>
-        <li>
-            <a href="about/about.html"> Относительная ссылка на страницу в каталоге уровнем выше текущего</a>
-        </li>
-        <li>
-            <a href="about/under_about/under.html"> Относительная ссылка на страницу в каталоге двумя уровнями выше текущего</a>
-        </li>
-        <li>
-            Не знаете где учиться на проффесию программиста, попробуйте пройти курсы от 
-            <a href="https://thatsthefinger.com/">Блаблаболов</a> без
-            смс и регистраций
-        </li>
-        <li>
-            <a href="https://www.kubsu.ru/index.php#block-block-8">Ссылка на контакты приёмной комисии</a>
-        </li>
-
-        <li>
-            <img src="circle.png" width="400" usemap="#square" alt="Square" class="circle">
-        </li>
-    </ul>
-    <map name="square">
-        <area shape="rect" coords="203,41,346,183" href="#" alt="">
-        <area shape="circle" coords="100,107,73" href="#" alt="">
-    </map>
-    <ul>
-
-        <li>
-            <a href="">Пустая ссылка</a>
-        </li>
-        <li>
-            <a>Без href</a>
-        </li>
-        <li>
-            <a href="http://www.staggeringbeauty.com/" rel="nofolow">Ссылку, по которой запрещен переход поисковикам</a>
-        </li>
-        <li>
-            <a href="https://onesquareminesweeper.com/" rel="noindex">Запрещенную для индексации поисковиками</a>
-        </li>
-    </ul>
-    <ol>
-        <li>
-            <a href="#" title="Example">Ссылка</a>
-        </li>
-        <li>
-            <a href="https://google.com" title="Google">Ссылка на Google</a>
-        </li>
-        <li>
-            <a href="https://stackoverflow.com" title="Stack Overflow">Ссылка на Stack Overflow</a>
-        </li>
-    </ol>
-    <ul>
-        <li>
-            <a id="button" href="ftp://user:pass123@tavalik.ru/Temp/file.txt">Скачать файл</a>
-        </li>
-    </ul>
-
-    <form>
-        <input type="text" placeholder="Введите ваше ФИО" required>
-        <input type="tel" placeholder="Введите телефон" required>
-        <input type="email" placeholder="Введите email" required>
-        <br>
-        <br>
-        <input type="date" value="2023-06-14" required>
-        <strong>Ваш пол :</strong>
-        <label>
-            <input name="pol" type="radio" required>Мужчина
-        </label>
-        <label>
-            <input name="pol" type="radio" required>Женшина
-        </label>
-        <br>
-        <br>
-        <strong>Любимый язык программирования :</strong>
-        <select name="field" multiple="multiple">
-            <option value="one">Pascal</option>
-            <option value="one">C</option>
-            <option value="one">C++</option>
-            <option value="one">JavaScript</option>
-            <option value="one">PHP</option>
-            <option value="one" selected="">Python</option>
-            <option value="one">Java</option>
-            <option value="one">Haskel</option>
-            <option value="one">Clojure</option>
-            <option value="one">Prolog</option>
-            <option value="one">Scala</option>
-        </select>
-        <br>
-        <br>
-        <textarea cols="42" rows="10" placeholder="Напишите в данном поле информацию о себе" required></textarea>
-        <br>
-        <label>
-            <input type="checkbox" required>С контрактом ознакомлен (а)
-        </label>
-        <input type="submit" value="Сохранить">
-    </form>
+    <div class="body" id="body">
+        <div class="opasity">
+            <button class="btn left" id="btn_left">Left</button>
+            <div class="div_box">
+                <img class="div_block one" id="one" src="img/one.jpg" alt="">
+                <img class="div_block two" id="two" src="img/two.jpg" alt="">
+                <img class="div_block tree" id="tree" src="img/tree.jpg" alt="">
+                <img class="div_block four" id="four" src="img/four.jpg" alt="">
+                <img class="div_block five" id="five" src="img/five.jpg" alt="">
+                <img class="div_block six" id="six" src="img/six.jpg" alt="">
+            </div>
+            <button class="btn right" id="btn_right">Right</button>
+        </div>
+    </div>
 </body>
-
 </html>
